Test/errors/err_unknown_type.cb
extern int main()
{
    expect_error("unknown type");
    Blorf x;
    return 0;
}
